@@ -1,4 +1,4 @@
-from test.test_support import verbose, findfile
+from test.test_support import verbose, findfile, TestFailed
 import tokenize, os, sys
 
 if verbose:
@@ -10,3 +10,21 @@ f.close()
 
 if verbose:
     print 'finished'
+
+###### Test detecton of IndentationError ######################
+
+from cStringIO import StringIO
+
+sampleBadText = """
+def foo():
+    bar
+  baz
+"""
+
+try:
+    for tok in tokenize.generate_tokens(StringIO(sampleBadText).readline):
+        pass
+except IndentationError:
+    pass
+else:
+    raise TestFailed("Did not detect IndentationError:")
